# dtvm-rust

./: .gitignore  Cargo copy.toml  Cargo.toml  README.md  build.rs  copy_deps.sh
evm_example/: Cargo.toml  FINAL_SIMPLIFIED_API_SUMMARY.md  FLUENT_PARAM_BUILDER_SUMMARY.md  OPTIMIZED_CALLDATA_SUMMARY.md  UNIFIED_CALLDATA_SUMMARY.md
evm_example/src/: contract_executor.rs  lib.rs
evm_example/tests/: advanced_host_test.rs  base_host_test.rs  contract_calls_test.rs  counter_test.rs  simple_token_test.rs
evm_example/tests/common/: calldata.rs  mod.rs
example/: AdvancedHostFunctions.wasm  BaseHostFunctions.wasm  BaseInfo.sol  BaseInfo.wasm  ContractCalls.wasm  ContractCalls.yul  ContractCalls_505_SimpleContract_556.wasm  SimpleTarget.wasm  SimpleToken.wasm  counter.wasm  counter0.wasm  fib.0.wasm  infinite.wasm
src/: lib.rs
src/evm/: error.rs  mod.rs  traits.rs  utils.rs
src/evm/host_functions/: account.rs  block.rs  code.rs  contract.rs  control.rs  crypto.rs  fee.rs  log.rs  math.rs  mod.rs  storage.rs  transaction.rs
src/tests/: mod.rs  runtime_test.rs
