[package]
name = "dtvmcore_rust"
version = "0.1.0"
edition = "2021"
authors = ["DTVM Authors"]
description = "Rust implementation of EVM host functions for DTVM runtime"
license = "Apache-2.0"
repository = "https://github.com/dtvm/dtvm"
keywords = ["evm", "blockchain", "wasm", "smart-contracts", "ethereum"]
categories = ["cryptography", "wasm", "development-tools"]
build = "build.rs"
links = "zetaengine"
rust-version = "1.70"

[features]
default = ["evm", "logging"]
evm = []
logging = ["log", "env_logger"]

[build-dependencies]
cc = "1.0"

[dependencies]
cty = "0.2.2"
libc = "0.2.121"
hex = { version = "0.4", features = ["std"] }
log = { version = "0.4", optional = true }
env_logger = { version = "0.10", optional = true }
num-bigint = "0.4"
num-traits = "0.2"
sha2 = "0.10"
sha3 = "0.10"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
